<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre</string>
    <string name="product_description">Descripción</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="loading_message">Cargando...</string>
    <string name="create_button">Crear</string>
    <string name="okResponseCreateProduct">Producto Creado Correctamente</string>
    <string name="errResponseCreateProduct">Error Creando el Producto</string>

    <string name="text_description">Descripción</string>
    <string name="text_name">Nombre</string>
    <string name="text_price">Precio</string>
    <string name="text_quantity">Cantidad</string>
    <string name="text_button">Crear producto</string>

    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="validate_internet">Error de conectividad</string>
    <string name="correct">Se ha eliminado correctamente</string>
    <string name="error_delete_product">Ha ocurrido un error eliminando el producto</string>
    <string name="deleteProduct">Producto eliminado</string>
    <string name="error">Error</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="update_button">Update Product</string>
    <string name="contact_username">Nombre de usuario:</string>
    <string name="contact_description">Descripción:</string>
    <string name="contact_number">Número de contacto:</string>
    <string name="contact_type">Tipo:</string>
    <string name="contact_cordinates">Ubicación:</string>
    <string name="contact_name">Nombre completo:</string>
    <string name="option_cancel">Cancelar !!!</string>
    <string name="close_sesion">Cesar sesión</string>
    <string name="title_activity_maps">Map</string>

</resources>
