<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/contacto" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:paddingRight="4dp"
        android:paddingLeft="4dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="2dp"
            android:paddingLeft="2dp">


            <TextView
                android:id="@+id/activity_contact_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_contact_detail_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_username"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
            />

            <TextView
                android:id="@+id/activity_contact_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
            />

            <TextView
                android:id="@+id/activity_contact_detail_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_contact_detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_contact_detail_cordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_cordinates"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="2dp"
            android:paddingLeft="2dp">

            <TextView
                android:id="@+id/consult_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/consult_contact_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_username"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            />

            <TextView
                android:id="@+id/consult_contact_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            />

            <TextView
                android:id="@+id/consult_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/consult_contact_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/consult_contact_cordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_cordinates"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:onClick="deleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:src="@drawable/ic_delete_forever_black_24dp" />

</LinearLayout>